// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands config test (folder with rcfile / as json) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "{\\"key\\":\\"defaultLanguageName\\",\\"effective\\":\\"node\\",\\"description\\":\\"Default language mode that should be used when a package doesn't offer any insight\\",\\"type\\":\\"STRING\\",\\"default\\":\\"node\\"}
{\\"key\\":\\"initScope\\",\\"effective\\":\\"my-test\\",\\"source\\":\\"WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc\\",\\"description\\":\\"Scope used when creating packages via the init command\\",\\"type\\":\\"STRING\\",\\"default\\":null}
{\\"key\\":\\"lastUpdateCheck\\",\\"effective\\":null,\\"description\\":\\"Last timestamp we checked whether new Yarn versions were available\\",\\"type\\":\\"STRING\\",\\"default\\":null}",
}
`;

exports[`Commands config test (folder with rcfile / showing explanation) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - Default language mode that should be used when a package doesn't offer any insight - 'node'
➤ YN0000: initScope - Scope used when creating packages via the init command - 'my-test'
➤ YN0000: lastUpdateCheck - Last timestamp we checked whether new Yarn versions were available - null",
}
`;

exports[`Commands config test (folder with rcfile / showing the source) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - <default> - 'node'
➤ YN0000: initScope - WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc - 'my-test'
➤ YN0000: lastUpdateCheck - <default> - null",
}
`;

exports[`Commands config test (folder with rcfile / without flags) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - 'node'
➤ YN0000: initScope - 'my-test'
➤ YN0000: lastUpdateCheck - null",
}
`;

exports[`Commands config test (folder with rcfile and rc in ancestor parent / as json) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "{\\"key\\":\\"defaultLanguageName\\",\\"effective\\":\\"node\\",\\"description\\":\\"Default language mode that should be used when a package doesn't offer any insight\\",\\"type\\":\\"STRING\\",\\"default\\":\\"node\\"}
{\\"key\\":\\"initScope\\",\\"effective\\":\\"my-test\\",\\"source\\":\\"WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc\\",\\"description\\":\\"Scope used when creating packages via the init command\\",\\"type\\":\\"STRING\\",\\"default\\":null}
{\\"key\\":\\"lastUpdateCheck\\",\\"effective\\":\\"1555784893958\\",\\"source\\":\\"WORKSPACE_ROOT/.spec-yarnrc\\",\\"description\\":\\"Last timestamp we checked whether new Yarn versions were available\\",\\"type\\":\\"STRING\\",\\"default\\":null}",
}
`;

exports[`Commands config test (folder with rcfile and rc in ancestor parent / showing explanation) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - Default language mode that should be used when a package doesn't offer any insight - 'node'
➤ YN0000: initScope - Scope used when creating packages via the init command - 'my-test'
➤ YN0000: lastUpdateCheck - Last timestamp we checked whether new Yarn versions were available - '1555784893958'",
}
`;

exports[`Commands config test (folder with rcfile and rc in ancestor parent / showing the source) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - <default> - 'node'
➤ YN0000: initScope - WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc - 'my-test'
➤ YN0000: lastUpdateCheck - WORKSPACE_ROOT/.spec-yarnrc - '1555784893958'",
}
`;

exports[`Commands config test (folder with rcfile and rc in ancestor parent / without flags) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - 'node'
➤ YN0000: initScope - 'my-test'
➤ YN0000: lastUpdateCheck - '1555784893958'",
}
`;

exports[`Commands config test (folder with rcfile and rc in home folder / as json) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "{\\"key\\":\\"defaultLanguageName\\",\\"effective\\":\\"python\\",\\"source\\":\\"HOME/.spec-yarnrc\\",\\"description\\":\\"Default language mode that should be used when a package doesn't offer any insight\\",\\"type\\":\\"STRING\\",\\"default\\":\\"node\\"}
{\\"key\\":\\"initScope\\",\\"effective\\":\\"my-test\\",\\"source\\":\\"WORKSPACE_ROOT/.spec-yarnrc\\",\\"description\\":\\"Scope used when creating packages via the init command\\",\\"type\\":\\"STRING\\",\\"default\\":null}
{\\"key\\":\\"lastUpdateCheck\\",\\"effective\\":\\"1555784893958\\",\\"source\\":\\"WORKSPACE_ROOT/.spec-yarnrc\\",\\"description\\":\\"Last timestamp we checked whether new Yarn versions were available\\",\\"type\\":\\"STRING\\",\\"default\\":null}",
}
`;

exports[`Commands config test (folder with rcfile and rc in home folder / showing explanation) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - Default language mode that should be used when a package doesn't offer any insight - 'python'
➤ YN0000: initScope - Scope used when creating packages via the init command - 'my-test'
➤ YN0000: lastUpdateCheck - Last timestamp we checked whether new Yarn versions were available - '1555784893958'",
}
`;

exports[`Commands config test (folder with rcfile and rc in home folder / showing the source) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - HOME/.spec-yarnrc - 'python'
➤ YN0000: initScope - WORKSPACE_ROOT/.spec-yarnrc - 'my-test'
➤ YN0000: lastUpdateCheck - WORKSPACE_ROOT/.spec-yarnrc - '1555784893958'",
}
`;

exports[`Commands config test (folder with rcfile and rc in home folder / without flags) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - 'python'
➤ YN0000: initScope - 'my-test'
➤ YN0000: lastUpdateCheck - '1555784893958'",
}
`;

exports[`Commands config test (folder with rcfile and rc in parent / as json) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "{\\"key\\":\\"defaultLanguageName\\",\\"effective\\":\\"node\\",\\"description\\":\\"Default language mode that should be used when a package doesn't offer any insight\\",\\"type\\":\\"STRING\\",\\"default\\":\\"node\\"}
{\\"key\\":\\"initScope\\",\\"effective\\":\\"my-test\\",\\"source\\":\\"WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc\\",\\"description\\":\\"Scope used when creating packages via the init command\\",\\"type\\":\\"STRING\\",\\"default\\":null}
{\\"key\\":\\"lastUpdateCheck\\",\\"effective\\":\\"1555784893958\\",\\"source\\":\\"WORKSPACE_ROOT/subfolder/.spec-yarnrc\\",\\"description\\":\\"Last timestamp we checked whether new Yarn versions were available\\",\\"type\\":\\"STRING\\",\\"default\\":null}",
}
`;

exports[`Commands config test (folder with rcfile and rc in parent / showing explanation) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - Default language mode that should be used when a package doesn't offer any insight - 'node'
➤ YN0000: initScope - Scope used when creating packages via the init command - 'my-test'
➤ YN0000: lastUpdateCheck - Last timestamp we checked whether new Yarn versions were available - '1555784893958'",
}
`;

exports[`Commands config test (folder with rcfile and rc in parent / showing the source) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - <default> - 'node'
➤ YN0000: initScope - WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc - 'my-test'
➤ YN0000: lastUpdateCheck - WORKSPACE_ROOT/subfolder/.spec-yarnrc - '1555784893958'",
}
`;

exports[`Commands config test (folder with rcfile and rc in parent / without flags) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - 'node'
➤ YN0000: initScope - 'my-test'
➤ YN0000: lastUpdateCheck - '1555784893958'",
}
`;

exports[`Commands config test (folder with rcfile without trailing newline / as json) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "{\\"key\\":\\"defaultLanguageName\\",\\"effective\\":\\"node\\",\\"description\\":\\"Default language mode that should be used when a package doesn't offer any insight\\",\\"type\\":\\"STRING\\",\\"default\\":\\"node\\"}
{\\"key\\":\\"initScope\\",\\"effective\\":\\"my-test\\",\\"source\\":\\"WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc\\",\\"description\\":\\"Scope used when creating packages via the init command\\",\\"type\\":\\"STRING\\",\\"default\\":null}
{\\"key\\":\\"lastUpdateCheck\\",\\"effective\\":null,\\"description\\":\\"Last timestamp we checked whether new Yarn versions were available\\",\\"type\\":\\"STRING\\",\\"default\\":null}",
}
`;

exports[`Commands config test (folder with rcfile without trailing newline / showing explanation) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - Default language mode that should be used when a package doesn't offer any insight - 'node'
➤ YN0000: initScope - Scope used when creating packages via the init command - 'my-test'
➤ YN0000: lastUpdateCheck - Last timestamp we checked whether new Yarn versions were available - null",
}
`;

exports[`Commands config test (folder with rcfile without trailing newline / showing the source) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - <default> - 'node'
➤ YN0000: initScope - WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc - 'my-test'
➤ YN0000: lastUpdateCheck - <default> - null",
}
`;

exports[`Commands config test (folder with rcfile without trailing newline / without flags) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - 'node'
➤ YN0000: initScope - 'my-test'
➤ YN0000: lastUpdateCheck - null",
}
`;

exports[`Commands config test (folder without rcfile in ancestry / as json) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "{\\"key\\":\\"defaultLanguageName\\",\\"effective\\":\\"node\\",\\"description\\":\\"Default language mode that should be used when a package doesn't offer any insight\\",\\"type\\":\\"STRING\\",\\"default\\":\\"node\\"}
{\\"key\\":\\"initScope\\",\\"effective\\":null,\\"description\\":\\"Scope used when creating packages via the init command\\",\\"type\\":\\"STRING\\",\\"default\\":null}
{\\"key\\":\\"lastUpdateCheck\\",\\"effective\\":null,\\"description\\":\\"Last timestamp we checked whether new Yarn versions were available\\",\\"type\\":\\"STRING\\",\\"default\\":null}",
}
`;

exports[`Commands config test (folder without rcfile in ancestry / showing explanation) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - Default language mode that should be used when a package doesn't offer any insight - 'node'
➤ YN0000: initScope - Scope used when creating packages via the init command - null
➤ YN0000: lastUpdateCheck - Last timestamp we checked whether new Yarn versions were available - null",
}
`;

exports[`Commands config test (folder without rcfile in ancestry / showing the source) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - <default> - 'node'
➤ YN0000: initScope - <default> - null
➤ YN0000: lastUpdateCheck - <default> - null",
}
`;

exports[`Commands config test (folder without rcfile in ancestry / without flags) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: defaultLanguageName - 'node'
➤ YN0000: initScope - null
➤ YN0000: lastUpdateCheck - null",
}
`;
